--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-	 "web":"node server.js"
+    "web": "node server.js",
+	"dev": "nodemon server.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -13,7 +14,7 @@
     "fetch": "^1.1.0",
     "multer": "^1.3.1",
     "nodemon": "^1.18.3",
-    "npm": "^6.1.0",
+    "npm": "^6.3.0",
     "querystring": "^0.2.0",
     "react": "^16.4.1",
     "request": "^2.81.0"
